# master-knowledge-base

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  AS-INDEX-KB-MASTER.md  CONTRIBUTOR_GUIDE.md  PLAN.MD  README.md  _key_definitions.md  analyze_deps.py  antifragile-os-v3.0.md  aos-comprehensive-critique-report.md  aos-v3.0-analysis-gemini.md  code2prompt-guide.md  commit_message_phase_b.txt  comprehensive-standards-analysis-remaining-tasks-20250616-2101.md  deprecate_collections.py  deprecate_guides.py  docker-compose.runtime.yml  extract_frontmatter_data.py  final_cleanup_verification.md  frontmatter-analysis.md  frontmatter-implementation-damage-assessment-20250617-1328.md  handlebars-explanation.md  json-ld-roadmap-checklist.md  json-ld-roadmap-progress-tracker.md  json-ld-roadmap.md  kb-directory.md  knowledge-base-tree.md  linter_missing_frontmatter.md  linter_report.md  linter_report_mkb_current.md  linter_report_progress.md  linter_report_progress2.md  linter_report_progress3.md  linter_report_updated.md  master-knowledge-base-to-root-migration-analysis.md  mermaid-diagram-guidelines.md  migration_scripts_analysis_and_recommendations.md  naming-enforcer-summary.md  (+36 more)
.claude/: settings.local.json
APMDD v2.1/: APMDD v2.1 - Part 0 - Table of Contents.md  APMDD v2.1 - Part 1 - Master Guide & Introduction.md  APMDD v2.1 - Part 2 - Core Principles, Concepts & Roles.md  APMDD v2.1 - Part 4 - Modeling Types, Strategy & Notations.md  (+10 more)
archive/scribe-v1.0-20250717-0332/: README.md  pyproject.toml  requirements.txt  watcher.py
archive/scribe-v1.0-20250717-0332/actions/: base_action.py  enhanced_frontmatter_action.py  graph_validation_action.py  naming_enforcement_action.py  reconciliation_action.py  run_command_action.py
archive/scribe-v1.0-20250717-0332/config/: config.schema.json
archive/scribe-v1.0-20250717-0332/core/: __init__.py  action_dispatcher.py  atomic_write.py  health_server.py  security_manager.py
archive/scribe-v1.0-20250717-0332/prompts/: schema_constraint_prompts.py
archive/scribe-v1.0-20250717-0332/scribe_engine.egg-info/: SOURCES.txt
tools/scribe/: CHANGELOG.md  README.md  TODO.md  VAULT_E2E_TESTING.md  __init__.py  dependency-management-analysis-v2.md  dependency-management-analysis.md  engine.py  main.py  pyproject.toml  remediation-plan.md  requirements.lock.txt  requirements.txt  scribe-audit-response.md  scribe-audit.md  setup.py  watcher.py  worker.py
tools/scribe/.claude/: settings.local.json
tools/scribe/actions/: README.md  __init__.py  base.py  enhanced_frontmatter_action.py  graph_validation_action.py  naming_enforcement_action.py  reconciliation_action.py  roadmap_populator_action.py  run_command_action.py  run_command_action_legacy.py  view_generation_action.py
tools/scribe/actions/enhanced_frontmatter_action/: manifest.json
tools/scribe/actions/file_processing_orchestrator/: __init__.py  file_processing_orchestrator.py  manifest.json
tools/scribe/actions/graph_validation_action/: manifest.json
tools/scribe/actions/naming_enforcement_action/: manifest.json
tools/scribe/actions/reconciliation_action/: manifest.json
tools/scribe/actions/roadmap_populator_action/: manifest.json
tools/scribe/actions/run_command_action/: manifest.json
tools/scribe/actions/view_generation_action/: manifest.json
tools/scribe/adapters/: README.md  __init__.py  http_app.py  http_validation.py  nats_subscriber.py  shacl_adapter.py
tools/scribe/config/: README.md  config.json  logging.yaml  security_policy.yaml  sst-update-workflow.json  vault_setup.md
tools/scribe/core/: README.md  action_dispatcher.py  async_processor.py  atomic_write.py  boundary_validator.py  cache_manager.py  circuit_breaker.py  config_manager.py  dlq.py  engine_factory.py  error_recovery.py  event_bus.py  factories.py  file_optimizer.py  health_monitor.py  health_server.py  hma_ports.py  hma_telemetry.py  logging_config.py  metrics.py  minimal_core.py  mtls.py  plugin_loader.py  port_adapters.py  ports.py  rule_processor.py  secrets.py  security_audit.py  security_manager.py  telemetry.py  vault_certificate_manager.py  vault_circuit_breaker.py  vault_graceful_degradation.py  vault_metrics_collector.py  vault_otlp_integration.py  vault_policy_manager.py  vault_retry_handler.py  vault_rotation_manager.py  vault_secret_provider.py  windows_atomic_write.py
tools/scribe/core/adapters/: __init__.py  nats_adapter.py
tools/scribe/deployment/: docker-compose.runtime.yml
tools/scribe/deployment/certificates/: ca.srl  client.crt  client.csr  client.key  server.crt  server.csr  server.key
tools/scribe/deployment/docker/: Dockerfile  docker-compose.yml
tools/scribe/deployment/kubernetes/: scribe-configmap.template.yaml  scribe-deployment.yaml  scribe-secrets.template.yaml
tools/scribe/deployment/observability/: alert_rules.yml  grafana_datasource.yml  otel-collector.yaml  prometheus.yml
tools/scribe/deployment/observability/dashboards/: scribe_overview.json
tools/scribe/deployment/observability/grafana/dashboards/: vault-operations-overview.json  vault-resilience-monitoring.json  vault-secret-lifecycle.json
tools/scribe/deployment/observability/prometheus/rules/: vault-alerts.yml
tools/scribe/deployment/vault/: ca.crt  ca.key  vault.hcl
tools/scribe/deployment/vault/init/: init-vault.sh
tools/scribe/docs/decisions/: ADR-001-nats-message-broker.md  ADR-002-ports-and-adapters.md  ADR-003-shacl-json-bridge.md  ADR-004-python-async-concurrency.md  ADR-005-hma-compliance-strategy.md  README.md
tools/scribe/error_handling/: llm_error_handler.py
tools/scribe/integrations/: llm_integration.py
tools/scribe/schemas/: README.md  plugin_manifest.schema.json  scribe_config.schema.json
tools/scribe/schemas/l1/: file_system_event.schema.json  http_request.schema.json  nats_message.schema.json
tools/scribe/schemas/manifest/: plugin_manifest.schema.json
tools/scribe/scribe_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/scribe/utils/: README.md  frontmatter_parser.py
tools/scribe/validation/: llm_shacl_validator.py
(+1295 files in other folders)
