[project]
name = "scribe-engine"
version = "1.0.1"
description = "Scribe Automation Engine"
requires-python = ">=3.9"
dependencies = [
    "watchdog>=3.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["engine", "watcher", "worker"]
packages = ["core", "actions"] 